fix: refactor hard coded connection string to Heroku config var

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -5,10 +5,10 @@
 body{
     display: flex;
     margin: 10px;
-    justify-content: center;
-    /* background-image: url("./assets/images/bookshelf.jpg");
+    /* justify-content: center; */
+    background-image: url("./assets/images/bookshelf.jpg");
     background-repeat: no-repeat;
-    background-size: cover; */
+    background-size: cover;
     color: purple;
     
 }
